--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               "LIZP: Learn/Implement/Zone/Practice"
+title:               "LizP: Learn iz Practice"
 url:                 https://blogs.lizmore.dev
 baseurl:             ''
 paginate:            5
